src/test/c/reject/08-wrongTypeAssignment.msh
Note myNote = Chord(c, e, g, d#);
